naive versions of core algs working

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "asbuild:untouched": "asc assembly/index.ts --target debug",
     "asbuild:optimized": "asc assembly/index.ts --target release",
     "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized",
-    "test:watch": "onchange -i -k 'assembly/**/*.ts' -- npx asp"
+    "test:watch": "onchange -i -k 'assembly/**/*.ts' -- npx asp",
+    "test:watch-verbose": "onchange -i -k 'assembly/**/*.ts' -- npx asp --verbose"
   },
   "author": "",
   "license": "ISC",
